force-app/main/default/objects/Payment_Request__c/Payment_Request__c.object-meta.xml
<CustomObject>
    <label>付款申请</label>
    <nameField>
        <displayFormat>PR-{00000000}</displayFormat>
        <label>申请号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>