force-app/main/default/objects/Payment_Request__c/fields/Activity_Address__c.field-meta.xml
<CustomField>
    <fullName>Activity_Address__c</fullName>
    <formula>Related_Campaign__r.Campaigns_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>活动地点</label>
    <type>Text</type>
</CustomField>