force-app/main/default/objects/Payment_Request__c/fields/Activity_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_End_Date__c</fullName>
    <formula>Related_Campaign__r.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>活动结束日期</label>
    <type>Date</type>
</CustomField>