force-app/main/default/objects/Payment_Request__c/fields/Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>Activity_Name__c</fullName>
    <formula>Related_Campaign__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>活动名称</label>
    <type>Text</type>
</CustomField>