force-app/main/default/objects/Payment_Request__c/fields/Activity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Start_Date__c</fullName>
    <formula>Related_Campaign__r.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>活动开始日期</label>
    <type>Date</type>
</CustomField>