force-app/main/default/objects/Payment_Request__c/fields/Apply_Person__c.field-meta.xml
<CustomField>
    <fullName>Apply_Person__c</fullName>
    <formula>$User.FirstName + &apos; &apos; +  $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>申请人</label>
    <type>Text</type>
</CustomField>