force-app/main/default/objects/Payment_Request__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <defaultValue>&apos;未提交&apos;</defaultValue>
    <label>审批状态</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Approval_Status</valueSetName>
    </valueSet>
</CustomField>