force-app/main/default/objects/Payment_Request__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <defaultValue>&apos;总部&apos;</defaultValue>
    <label>区域</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>总部</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>