force-app/main/default/objects/Payment_Request__c/fields/Backgroud_And_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Backgroud_And_Purpose__c</fullName>
    <formula>Related_Campaign__r.BackGroud_And_Purpose__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>背景及目的介绍</label>
    <type>Text</type>
</CustomField>