force-app/main/default/objects/Payment_Request__c/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <label>成本中心</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>64365X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>