force-app/main/default/objects/Payment_Request__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>$User.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>部门</label>
    <type>Text</type>
</CustomField>