force-app/main/default/objects/Payment_Request__c/fields/Occupied_Budget__c.field-meta.xml
<CustomField>
    <fullName>Occupied_Budget__c</fullName>
    <label>已占用预算</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>