force-app/main/default/objects/Payment_Request__c/fields/Proposers_Appendix__c.field-meta.xml
<CustomField>
    <fullName>Proposers_Appendix__c</fullName>
    <label>发起人附言</label>
    <type>TextArea</type>
</CustomField>