force-app/main/default/objects/Payment_Request__c/fields/Related_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Related_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>关联活动</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Payment_Request</relationshipName>
    <type>Lookup</type>
</CustomField>