force-app/main/default/objects/Payment_Request__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>备注</label>
    <type>TextArea</type>
</CustomField>