force-app/main/default/objects/Payment_Request__c/fields/Surplus_Amount__c.field-meta.xml
<CustomField>
    <fullName>Surplus_Amount__c</fullName>
    <label>剩余金额</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>