force-app/main/default/objects/Payment_Request__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>总金额</label>
    <summarizedField>Expenses_Detail__c.Amount__c</summarizedField>
    <summaryForeignKey>Expenses_Detail__c.Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>