force-app/main/default/objects/Payment_Request__c/fields/Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>Vendor_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>付款对象</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>付款申请</relationshipLabel>
    <relationshipName>Payment_Application</relationshipName>
    <type>Lookup</type>
</CustomField>